--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "phpunit/phpunit": "~4.5"
     },
     "autoload": {
-       "psr-0": { "SlowProg\\SparkPostSwiftMailer": "" }
+       "psr-0": { "Sctr\\SparkPostSwiftMailer": "" }
     },
-    "target-dir": "SlowProg/SparkPostSwiftMailer"
+    "target-dir": "Sctr/SparkPostSwiftMailer"
 }
