--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "sctr/sparkpost-swiftmailer",
+    "name":        "sctr/sparkpost-swiftmailer",
     "description": "A SwiftMailer transport implementation for SparkPost",
-    "keywords": ["sparkpost", "swiftmailer"],
-    "homepage": "https://github.com/sctr/sparkpost-swiftmailer",
-    "type": "library",
+    "keywords":    ["sparkpost", "swiftmailer"],
+    "homepage":    "https://github.com/sctr/sparkpost-swiftmailer",
+    "type":        "library",
     "authors": [
         {
             "name": "Andrey Tyshev",
@@ -15,10 +15,10 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "sparkpost/sparkpost": "~2.0",
-        "swiftmailer/swiftmailer": "~5.3",
-        "php-http/guzzle6-adapter" : "~1.0"
+        "php":                       ">=7.0",
+        "php-http/guzzle6-adapter" : "~1.0",
+        "sparkpost/sparkpost":       "~2.0",
+        "swiftmailer/swiftmailer":   "~5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
@@ -27,6 +27,5 @@
         "psr-4": {
             "Sctr\\SparkPostSwiftMailer\\": "SwiftMailer/"
         }
-    },
-    "target-dir": "Sctr/SparkPostSwiftMailer"
+    }
 }
