--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php":                       ">=7.0",
         "php-http/guzzle6-adapter" : "~1.0",
         "sparkpost/sparkpost":       "~2.0",
-        "swiftmailer/swiftmailer":   "~5.3|~6.0"
+        "swiftmailer/swiftmailer":   "~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
